syntax = "proto3";
package promptkit.script.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "promptkit/llm/v1/llm.proto";
import "promptkit/script/v1/trace.proto";

message ScriptInline {
  reserved 2;
  
  string script = 1;
  string runtime = 3;
}

message Source {
  oneof source_type {
    ScriptInline script_inline = 1;
    bytes bundle_inline = 2;
  }
}

message Argument {
  enum Marker {
    MARKER_UNSPECIFIED = 0;
    MARKER_STREAM = 1;
  }

  oneof argument_type {
    google.protobuf.Value value = 1;
    string json = 2;
    bytes cbor = 3;
    Marker marker = 15;
  }
}

enum ContentType {
  CONTENT_TYPE_UNSPECIFIED = 0;
  CONTENT_TYPE_PROTOBUF_VALUE = 1;
  CONTENT_TYPE_JSON = 2;
  CONTENT_TYPE_CBOR = 3;
}

message Error {
  int32 code = 1;
  string message = 2;
}

message Result {
  oneof result_type {
    google.protobuf.Value value = 1;
    string json = 2;
    bytes cbor = 3;

    Error error = 15;
  }
}

message ExecutionSpec {
  google.protobuf.Duration timeout = 1;
  repeated Argument arguments = 2;
  string method = 3;

  llm.v1.LLMConfig llm_config = 4;

  TraceLevel trace_level = 20;
}

message ExecutionMetadata {
  repeated Trace traces = 20;
}

message ExecutionStreamMetadata {
  repeated Trace traces = 20;
}

message ExecuteRequest {
  Source source = 1;
  ExecutionSpec spec = 2;
  repeated ContentType result_content_type = 3;
}

message InitialExecuteRequest {
  Source source = 1;
  ExecutionSpec spec = 2;
  repeated ContentType result_content_type = 3;
}

message ExecuteServerStreamRequest {
  Source source = 1;
  ExecutionSpec spec = 2;
  repeated ContentType result_content_type = 3;
}

message ExecuteClientStreamRequest {
  oneof request_type {
    InitialExecuteRequest initial_request = 1;
    Argument stream_value = 2;
  }
}

message ExecuteStreamRequest {
  oneof request_type {
    InitialExecuteRequest initial_request = 1;
    Argument stream_value = 2;
  }
}

message ExecuteResponse {
  Result result = 1;
  ExecutionMetadata metadata = 15;
}

message ExecuteClientStreamResponse {
  Result result = 1;
  ExecutionMetadata metadata = 15;
}

message ExecuteServerStreamResponse {
  Result result = 1;
  ExecutionStreamMetadata metadata = 15;
}

message ExecuteStreamResponse {
  Result result = 1;
  ExecutionStreamMetadata metadata = 15;
}

message ListRuntimeRequest {}

message ListRuntimeResponse {
  repeated Runtime runtimes = 1;
}

message Runtime {
  string name = 1;
}

service ScriptService {
  rpc ListRuntime(ListRuntimeRequest) returns (ListRuntimeResponse) {}
  rpc Execute(ExecuteRequest) returns (ExecuteResponse) {}
  rpc ExecuteClientStream(stream ExecuteClientStreamRequest) returns (ExecuteClientStreamResponse) {}
  rpc ExecuteServerStream(ExecuteServerStreamRequest) returns (stream ExecuteServerStreamResponse) {}
  rpc ExecuteStream(stream ExecuteStreamRequest) returns (stream ExecuteStreamResponse) {}
}
