syntax = "proto3";
package promptkit.script.v1;

import "google/protobuf/timestamp.proto";

enum TraceLevel {
  TRACE_LEVEL_UNSPECIFIED = 0;
  TRACE_LEVEL_NONE = 1;
  TRACE_LEVEL_ALL = 2;
}

message Trace {
  message Log {
    string content = 1;
  }
  message Event {
    string kind = 1;
    int32 parent_id = 2;
    map<string, string> data = 3;
  }
  message SpanBegin {
    string kind = 1;
    int32 parent_id = 2;
    map<string, string> data = 3;
  }
  message SpanEnd {
    int32 parent_id = 1;
    map<string, string> data = 2;
  }

  int32 id = 1;
  string group = 2;
  google.protobuf.Timestamp timestamp = 3;

  oneof trace_type {
    Log log = 4;
    Event event = 5;
    SpanBegin span_begin = 6;
    SpanEnd span_end = 7;
  }
}
